--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(get_hyperparameter_values)
 export(gt_HPs)
 export(kernel_deriv)
 export(kernel_deriv_exp)
+export(optim_hp_L_BFGS_B)
 export(pairwise_kernel)
 export(pretty_print)
 export(set_hyperparameters)
