commit : plot kernel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,8 +8,10 @@ export(kernel_deriv)
 export(kernel_deriv_exp)
 export(optim_hp_L_BFGS_B)
 export(pairwise_kernel)
+export(plot_kernel_vs_distance)
 export(pretty_print)
 export(set_hyperparameters)
+export(visualize_kernel)
 exportClasses(AbstractKernel)
 exportClasses(ConstantKernel)
 exportClasses(LinearKernel)
@@ -30,6 +32,17 @@ exportMethods(kernel_deriv)
 exportMethods(pairwise_kernel)
 exportMethods(pretty_print)
 exportMethods(show)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,element_blank)
+importFrom(ggplot2,element_rect)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_gradient)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_minimal)
 importFrom(methods,"slot<-")
 importFrom(methods,is)
 importFrom(methods,new)
